# Hack-Babies-2.0

./: .gitignore  README.md  requirements.txt
backend/: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_venvs.ps1
backend/api/: admin.py  agents.py  apps.py  cache_index.py  generator.py  llm_agent.py  llm_client.py  models.py  prompts.py  reaction_animator.py  serializers.py  tests.py  urls.py  vector_search.py  views.py
backend/api/migrations/: 0004_conversation_message.py
backend/blender-mcp-main/: requirements.txt
backend/chemical_backend/: requirements.txt
backend/chemical_backend/chemical_backend/: asgi.py  urls.py  wsgi.py
backend/chemical_backend/molecules/: models.py  urls.py  views.py
backend/clients/mcp-client/: client.py  client_2.py  client_auto.py  pyproject.toml  requirements.txt  run_http_client.py  scene.glb  temp.html  temp_output.py
backend/media/: job_5_model.glb
backend/media/models/: CCC.glb  CCCCC.glb  CCO.glb  CCOOC.glb  CC__O_OC.glb  CC__O_Oc1ccccc1C__O_O.glb  CN1C_NC2_C1C__O_N_C__O_N2C_C.glb  CO.glb  COc1ccc_C_O_c_O_c1.glb  COc1ccc_C_O_cc1O.glb  C_C.glb  C_CCCC.glb  C_CCCCC.glb  C_CCCCCC.glb  C_CCCCC_o3Ibjv7.glb  C_C_H_1O_C__H__O__C__H__O__C__H_1N1C_NC2_NC_NC_N__C2N1.glb  Cc1c__N____O__O-__c__N____O__O-__c__N____O__O-__cc1.glb  Cc1ccccc1.glb  Cl.glb  Clc1cc_Cl_ccc1.glb  Clc1ccc_Cl_cc1.glb  Clc1ccccc1Cl.glb  Cn1cnc2c1c__O_n_C_c__O_n2C.glb  O.glb  OO.glb  O_O.glb  O_S__O__O_O.glb  _Na__._Cl-_.glb  _Na__._OH-_.glb  c1ccccc1.glb  (+4 more)
backend/project/: settings.py  urls.py  views.py
(+30 files in other folders)
