[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hack-babies-backend"
version = "0.1.0"
description = "Hack Babies 2.0 Backend Components"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AbhinavDShetty" }
]
dependencies = [
    "mcp>=1.18.0",
    "python-dotenv>=1.1.1",
    "django>=4.2.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
mcp-client = [
    "mcp>=1.18.0",
    "python-dotenv>=1.1.1"
]
chemical-backend = [
    "django>=4.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.1.1"
]
blender-mcp = [
    "mcp>=1.18.0",
    "python-dotenv>=1.1.1"
]

[tool.setuptools]
packages = [
    "blender-mcp-main",
    "chemical_backend",
    "clients.mcp-client"
]